--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "flowframe/laravel-trend": "^0.3.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "malzariey/filament-daterangepicker-filter": "^3.1",
         "psr/simple-cache": "2.0",
         "pxlrbt/filament-excel": "*"
     },
