--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/tinker": "^2.9",
         "malzariey/filament-daterangepicker-filter": "^3.1",
         "psr/simple-cache": "2.0",
-        "pxlrbt/filament-excel": "*"
+        "pxlrbt/filament-excel": "*",
+        "rupadana/filament-api-service": "^3.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
