--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "filament/filament": "^3.2",
         "flowframe/laravel-trend": "^0.3.0",
         "laravel/framework": "^11.9",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "malzariey/filament-daterangepicker-filter": "^3.1",
         "psr/simple-cache": "2.0",
