--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
+        "build-android": "npm run build && npx cap sync android",
+        "open-android": "npx cap open android",
         "dev": "vite"
     },
     "devDependencies": {
@@ -15,6 +17,18 @@
         "postcss": "^8.4.47",
         "postcss-nesting": "^13.0.1",
         "tailwindcss": "^3.4.14",
+        "typescript": "^5.6.3",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@capacitor/android": "^6.1.2",
+        "@capacitor/camera": "^6.1.0",
+        "@capacitor/cli": "^6.1.2",
+        "@capacitor/core": "^6.1.2",
+        "@capacitor/geolocation": "^6.0.1",
+        "@capacitor/local-notifications": "^6.1.0",
+        "@capacitor/network": "^6.0.2",
+        "@capacitor/preferences": "^6.0.2",
+        "@capacitor/push-notifications": "^6.0.2"
     }
 }
